--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@ node_modules
 index.cleaned.linted.commented.html
 index.fully_annotated.html
 index.annotated.linted.html
+index.minified.production (1).html
